fix: обновлен .gitignore, добавлена пустая папка logs

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,16 @@ __pycache__/
 *.pyd
 *.egg-info/
 *.eggs/
+
+# .env — секретные данные (не пушим в GitHub)
 .env
 
 # ==========================
 # Logs
 # ==========================
-logs/
+# Игнорируем все логи, но оставляем саму папку logs с .gitkeep
+logs/*
+!logs/.gitkeep
 *.log
 
 # ==========================
